# android_study

./: README  settings.gradle.kts
_hook/src/main/java/com/hook/: hook.java
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: CMakeLists.txt  hunter.cpp
app/src/main/cpp/Utils/: log.h
app/src/main/cpp/linker/: linker.cpp  linker_transparent_hugepage_support.cpp
app/src/main/cpp/linker_copy/: CFIShadow.h  linker_gnu_hash.cpp  mylinker.cpp  page.h
app/src/main/cpp/linker_copy/dobby/: ProcessRuntimeUtility.h  ProcesssRuntimeUtility.cc  StdMemory.h  bionic_linker_restriction.cc  dobby_symbol_resolver.cc
app/src/main/java/com/android/study/: ClassA.java  ClassB.java  MainActivity.kt
gradle/: libs.versions.toml
hook/: build.gradle.kts
hook/src/main/: AndroidManifest.xml
hook/src/main/java/com/hook/: FirstFragment.java  MainActivity.java  SecondFragment.java  hook.java
hook/src/main/res/menu/: menu_main.xml
hook/src/main/res/navigation/: nav_graph.xml
hook/src/main/res/values/: strings.xml
hook/src/main/res/values-v23/: themes.xml
nativeLib/src/main/cpp/hook/: CMakeLists.txt
